backend/k8s/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: kubecon-demo
  labels:
    app: api
    version: "${VERSION}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        version: "${VERSION}"
    spec:
      containers:
        - name: api
          image: "${IMAGE_TAG}"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kubecon-demo
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
